Fix KeyZen color scheme

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="creation__overlay"></div>
         <div class="creation__img"><img src="img/keyzen.png"></div>
         <div class="creation__text">
-          <div class="creation__name">KeyZen Touch Typing Game <span class="type">Game</span></div>
+          <div class="creation__name">KeyZen Touch Typing <span class="type">Game</span></div>
         </div></a></div>
     <div data-type="Simulator" class="creation acgraphs"><a href="https://nmn.gl/acgraphs">
         <div class="creation__overlay"></div>
