--- a/index.html
+++ b/index.html
@@ -1,88 +1,7 @@
-<!DOCTYPE html>
-<!-- if lt IE 7<html class="no-js lt-ie9 lt-ie8 lt-ie7">
--->
-<!-- if IE 7<html class="no-js lt-ie9 lt-ie8">
--->
-<!-- if IE 8<html class="no-js lt-ie9">
---><!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width">
-  <link href="css/main.css" rel="stylesheet" type="text/css" media="all"><link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
-  <!--if lt IE 9script(src='//html5shiv.googlecode.com/svn/trunk/html5.js')
-  -->
-  <title>Lab | Namanyay Goel</title>
-</head>
-<body>
-  <header>
-    <h1>Lab</h1>
-    <h3 class="credits">By <a href="http://nmn.gl/">Namanyay Goel</a></h3>
-  </header>
-  <div class="creations">
-    <div data-type="Book" class="creation lccpp"><a href="https://leanpub.com/lessconfusingcpp">
-        <div class="creation__overlay"></div>
-        <div class="creation__img"><img src="img/lccpp.png"></div>
-        <div class="creation__text">
-          <div class="creation__name">Less Confusing C++ <span class="type">Book</span></div>
-        </div></a></div>
-    <div data-type="Simulator" class="creation collisions"><a href="https://nmn.gl/collisions">
-        <div class="creation__overlay"></div>
-        <div class="creation__img"><img src="img/collisions.png"></div>
-        <div class="creation__text">
-          <div class="creation__name">Collisions <span class="type">Simulator</span></div>
-        </div></a></div>
-    <div data-type="Simulator" class="creation diode"><a href="https://nmn.gl/diode/">
-        <div class="creation__overlay"></div>
-        <div class="creation__img"><img src="img/diode.png"></div>
-        <div class="creation__text">
-          <div class="creation__name">P-N Junction Diode <span class="type">Simulator</span></div>
-        </div></a></div>
-    <div data-type="Game" class="creation keyzen"><a href="https://nmn.gl/KeyZen/">
-        <div class="creation__overlay"></div>
-        <div class="creation__img"><img src="img/keyzen.png"></div>
-        <div class="creation__text">
-          <div class="creation__name">KeyZen Touch Typing <span class="type">Game</span></div>
-        </div></a></div>
-    <div data-type="Simulator" class="creation acgraphs"><a href="https://nmn.gl/acgraphs">
-        <div class="creation__overlay"></div>
-        <div class="creation__img"><img src="img/acgraphs.png"></div>
-        <div class="creation__text">
-          <div class="creation__name">AC Graphs <span class="type">Simulator</span></div>
-        </div></a></div>
-    <div data-type="Research" class="creation bandc"><a href="https://nmn.gl/moo">
-        <div class="creation__overlay"></div>
-        <div class="creation__img"><img src="img/bandc.png"></div>
-        <div class="creation__text">
-          <div class="creation__name">Bulls &amp; Cows <span class="type">Research</span></div>
-        </div></a></div>
-    <div data-type="Simulator" class="creation acgen"><a href="https://nmn.gl/acgen">
-        <div class="creation__overlay"></div>
-        <div class="creation__img"><img src="img/acgen.png"></div>
-        <div class="creation__text">
-          <div class="creation__name">AC Generator <span class="type">Simulator</span></div>
-        </div></a></div>
-    <div data-type="Simulator" class="creation shm-simulator"><a href="https://nmn.gl/SHM-simulator">
-        <div class="creation__overlay"></div>
-        <div class="creation__img"><img src="img/shm-simulator.png"></div>
-        <div class="creation__text">
-          <div class="creation__name">Simple Harmonic Motion <span class="type">Simulator</span></div>
-        </div></a></div>
-    <div data-type="Simulator" class="creation equipot"><a href="https://nmn.gl/Equipot">
-        <div class="creation__overlay"></div>
-        <div class="creation__img"><img src="img/equipot.png"></div>
-        <div class="creation__text">
-          <div class="creation__name">Equipotential Surfaces <span class="type">Simulator</span></div>
-        </div></a></div>
-  </div>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    
-    ga('create', 'UA-41471024-6', 'auto');
-    ga('send', 'pageview');
-  </script>
-</body>
+<!DOCTYPE html><!-- if lt IE 7<html class="no-js lt-ie9 lt-ie8 lt-ie7">--><!-- if IE 7<html class="no-js lt-ie9 lt-ie8">--><!-- if IE 8<html class="no-js lt-ie9">--><!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]--><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta name="description" content=""><meta name="viewport" content="width=device-width"><link href="css/main.css" rel="stylesheet" type="text/css" media="all"><link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'><!--if lt IE 9script(src='//html5shiv.googlecode.com/svn/trunk/html5.js')--><script src="js/main.js"></script><title>Lab | Namanyay Goel</title></head><body><header><h1>Lab</h1><h3 class="credits">By <a href="http://nmn.gl/">Namanyay Goel</a></h3></header><div class="creations"><div data-type="Book" class="creation lccpp"><div class="creation__img"><a href="https://leanpub.com/lessconfusingcpp"><img src="img/lccpp.png"><div class="creation__overlay"></div></a></div><div class="creation__content"><h2 class="creation__name"><a href="https://leanpub.com/lessconfusingcpp">Less Confusing C++</a></h2><footer><span class="creation__type">Book</span><div data-created-at="2017-06" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span> (Age&nbsp;<span class="age">&hellip;</span>)</div></footer><article><p>I always felt frustrated at the study material for my 11<sup>th</sup> grade Computer Science course, which was an introduction to C++. I believed there was a massive improvement to be made by re-organizing the structure and steps of the course.</p><p>So I did just that. While finishing my 11<sup>th</sup> grade, I wrote a book called "Less Confusing C++" to teach the coursework in my style. Since the target audience was my peers, I made sure that the book is available for free.</p></article><footer><a href="https://leanpub.com/lessconfusingcpp" class="creation__link">Visit Project</a></footer></div></div><div data-type="Game" class="creation keyzen"><div class="creation__img"><a href="https://nmn.gl/KeyZen/"><img src="img/keyzen.png"><div class="creation__overlay"></div></a></div><div class="creation__content"><h2 class="creation__name"><a href="https://nmn.gl/KeyZen/">KeyZen Touch Typing</a></h2><footer><span class="creation__type">Game</span><div data-created-at="2013-10" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span> (Age&nbsp;<span class="age">&hellip;</span>)</div></footer><article><p>I made this game for a hackathon in a few hours. It was around a time when I was obssessed with improving my typing speed, following the logic that faster typing = faster programming.</p><p>I wanted to make soft, "biteable", pastel aesthetics. I remember that I especially enjoyed making and animating the keyboard. Keyzen took home the first prize that day.</p></article><footer><a href="https://nmn.gl/KeyZen/" class="creation__link">Visit Project</a><div class="creation__source"><a href="https://github.com/namanyayg/keyzen">Source on Github</a></div></footer></div></div><div data-type="Simulator" class="creation diode"><div class="creation__img"><a href="https://nmn.gl/diode/"><img src="img/diode.png"><div class="creation__overlay"></div></a></div><div class="creation__content"><h2 class="creation__name"><a href="https://nmn.gl/diode/">P-N Junction Diode</a></h2><footer><span class="creation__type">Simulator</span><div data-created-at="2015-12" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span> (Age&nbsp;<span class="age">&hellip;</span>)</div></footer><article><p><em>&ldquo;Diode&rdquo; is part of my Physics Simulator series, where I simulate various physical phenomena using JavaScript. I made multiple works in this series during my final years of high school, both to get a better understanding of the mathematics and to perhaps help some of my friends as well.</em></p><p>When I first studied them, the workings of a diode and their &ldquo;depletion region&rdquo; confused me. Given how essential they are for computing, I wanted to understand them better. Making this simulation helped.</p></article><footer><a href="https://nmn.gl/diode/" class="creation__link">Visit Project</a><div class="creation__source"><a href="https://github.com/namanyayg/diode">Source on Github</a></div></footer></div></div><div data-type="Simulator" class="creation acgen"><div class="creation__img"><a href="https://nmn.gl/acgen"><img src="img/acgen.png"><div class="creation__overlay"></div></a></div><div class="creation__content"><h2 class="creation__name"><a href="https://nmn.gl/acgen">AC Generator</a></h2><footer><span class="creation__type">Simulator</span><div data-created-at="2015-10" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span> (Age&nbsp;<span class="age">&hellip;</span>)</div></footer><article><p><em>&ldquo;AC Gen&rdquo; is part of my Physics Simulator series, where I simulate various physical phenomena using JavaScript. I made multiple works in this series during my final years of high school, both to get a better understanding of the mathematics and to perhaps help some of my friends as well.</em></p><p>Current electricity was one of my favourite topics in High School Physics. I they look beautiful while operating so I made this simulation.</p></article><footer><a href="https://nmn.gl/acgen" class="creation__link">Visit Project</a><div class="creation__source"><a href="https://github.com/namanyayg/acgen">Source on Github</a></div></footer></div></div><div data-type="Simulator" class="creation collisions"><div class="creation__img"><a href="https://nmn.gl/collisions"><img src="img/collisions.png"><div class="creation__overlay"></div></a></div><div class="creation__content"><h2 class="creation__name"><a href="https://nmn.gl/collisions">Collisions</a></h2><footer><span class="creation__type">Simulator</span><div data-created-at="2015-08" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span> (Age&nbsp;<span class="age">&hellip;</span>)</div></footer><article><p><em>&ldquo;Collisions&rdquo; is part of my Physics Simulator series, where I simulate various physical phenomena using JavaScript. I made multiple works in this series during my final years of high school, both to get a better understanding of the mathematics and to perhaps help some of my friends as well.</em></p><p>This one is a simulation of two dimensional elastic collisions, where I chose to demonstrate how the particles in a low density gas might collide.</p></article><footer><a href="https://nmn.gl/collisions" class="creation__link">Visit Project</a><div class="creation__source"><a href="https://github.com/namanyayg/collisions">Source on Github</a></div></footer></div></div><div data-type="Research" class="creation bandc"><div class="creation__img"><a href="https://nmn.gl/moo"><img src="img/bandc.png"><div class="creation__overlay"></div></a></div><div class="creation__content"><h2 class="creation__name"><a href="https://nmn.gl/moo">Bulls &amp; Cows</a></h2><footer><span class="creation__type">Research</span><div data-created-at="2015-11" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span> (Age&nbsp;<span class="age">&hellip;</span>)</div></footer><article><p>We were given the option of studying this game and produce a research paper for the <a href="https://coreisus.com/">COЯE</a> hackathon. We were given only 48 hours to prepare it. </p><p>My co-founder <a href="https://in.linkedin.com/in/adityag9">Aditya</a> and I figured out the working for the game and the optimal algorithms to solve it, and drafted a <a href="https://vixra.org/pdf/1601.0302v1.pdf">quick research paper</a> (using LaTeX for the first time here was a pleasant experience and it introduced me to a new tool).</p><p>After figuring out the game&rsquo;s algorithms, I decided to code it up as a JavaScript game for a demo, as I am always fond of practical explanations vs text.</p><p>We took home the first prize that day.</p></article><footer><a href="https://nmn.gl/moo" class="creation__link">Visit Project</a><div class="creation__source"><a href="https://github.com/namanyayg/bandc">Source on Github</a></div></footer></div></div><div data-type="Simulator" class="creation acgraphs"><div class="creation__img"><a href="https://nmn.gl/acgraphs"><img src="img/acgraphs.png"><div class="creation__overlay"></div></a></div><div class="creation__content"><h2 class="creation__name"><a href="https://nmn.gl/acgraphs">AC Graphs</a></h2><footer><span class="creation__type">Simulator</span><div data-created-at="2015-12" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span> (Age&nbsp;<span class="age">&hellip;</span>)</div></footer><article><p><em>&ldquo;AC Graphs&rdquo; is part of my Physics Simulator series, where I simulate various physical phenomena using JavaScript. I made multiple works in this series during my final years of high school, both to get a better understanding of the mathematics and to perhaps help some of my friends as well.</em></p><p>I loved the idea of the components of an AC circuit always being out of phase and how beautiful their graphs looked. Plus, I thought this would be a fun thing to animate.</p></article><footer><a href="https://nmn.gl/acgraphs" class="creation__link">Visit Project</a><div class="creation__source"><a href="https://github.com/namanyayg/acgraphs">Source on Github</a></div></footer></div></div><div data-type="Simulator" class="creation equipot"><div class="creation__img"><a href="https://nmn.gl/Equipot"><img src="img/equipot.png"><div class="creation__overlay"></div></a></div><div class="creation__content"><h2 class="creation__name"><a href="https://nmn.gl/Equipot">Equipotential Surfaces</a></h2><footer><span class="creation__type">Simulator</span><div data-created-at="2015-08" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span> (Age&nbsp;<span class="age">&hellip;</span>)</div></footer><article><p><em>&ldquo;Equipot&rdquo; is part of my Physics Simulator series, where I simulate various physical phenomena using JavaScript. I made multiple works in this series during my final years of high school, both to get a better understanding of the mathematics and to perhaps help some of my friends as well.</em></p><p>Equipotential surfaces for equal charges were seen in my textbook, but I didn&rsquo;t notice one with a positive and equally opposite negative charge. So, I decided to make one.</p></article><footer><a href="https://nmn.gl/Equipot" class="creation__link">Visit Project</a><div class="creation__source"><a href="https://github.com/namanyayg/equipot">Source on Github</a></div></footer></div></div><div data-type="Simulator" class="creation shm-simulator"><div class="creation__img"><a href="https://nmn.gl/SHM-simulator"><img src="img/shm-simulator.png"><div class="creation__overlay"></div></a></div><div class="creation__content"><h2 class="creation__name"><a href="https://nmn.gl/SHM-simulator">Simple Harmonic Motion</a></h2><footer><span class="creation__type">Simulator</span><div data-created-at="2015-02" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span> (Age&nbsp;<span class="age">&hellip;</span>)</div></footer><article><p><em>&ldquo;SHM Simulators&rdquo; is part of my Physics Simulator series, where I simulate various physical phenomena using JavaScript. I made multiple works in this series during my final years of high school, both to get a better understanding of the mathematics and to perhaps help some of my friends as well.</em></p><p>My earliest simulation, the one where it all began. I just knew that simple harmonic motion would be fun to look at animated, so I made a simulation where I could easily tinker with the variables and see the formulas.</p></article><footer><a href="https://nmn.gl/SHM-simulator" class="creation__link">Visit Project</a><div class="creation__source"><a href="https://github.com/namanyayg/shm-simulator">Source on Github</a></div></footer></div></div></div><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-41471024-6', 'auto');
+ga('send', 'pageview');</script></body>
