--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
-  <link href="css/main.css" rel="stylesheet" type="text/css" media="all">
+  <link href="css/main.css?v=1707416267934" rel="stylesheet" type="text/css" media="all">
   <link rel="stylesheet" href="https://use.typekit.net/qfj0txf.css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css">
   <!--if lt IE 9script(src='//html5shiv.googlecode.com/svn/trunk/html5.js')
   -->
-  <script src="js/main.js"></script>
+  <script src="js/main.js?v=1707416267934"></script>
   <title>Lab | Namanyay Goel</title>
 </head>
 <body>
