Add project IndiaSmile

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
-  <link href="css/main.css?v=1707416267934" rel="stylesheet" type="text/css" media="all">
+  <link href="css/main.css?v=1707498567754" rel="stylesheet" type="text/css" media="all">
   <link rel="stylesheet" href="https://use.typekit.net/qfj0txf.css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css">
   <!--if lt IE 9script(src='//html5shiv.googlecode.com/svn/trunk/html5.js')
   -->
-  <script src="js/main.js?v=1707416267934"></script>
+  <script src="js/main.js?v=1707498567755"></script>
   <title>Lab | Namanyay Goel</title>
 </head>
 <body>
@@ -37,13 +37,30 @@
   </header>
   <div class="wrapper">
     <div class="creations">
+      <div data-type="Tool" class="creation webstiles">
+        <div class="creation__img"><a href="http://webstiles.namanyayg.com/"><img src="img/webstiles.png">
+            <div class="creation__overlay"></div></a></div>
+        <div class="creation__content">
+          <h2 class="creation__name"><a href="http://webstiles.namanyayg.com/">Webstiles In-Browser UI Prototyping</a></h2>
+          <footer><span class="creation__type">Tool</span>
+            <div data-created-at="2013-01" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span><span class="age-container"></span></div>
+          </footer>
+          <article>
+            <p>I made webstiles around the time when I first started working on client projects. Webstiles was born out of a need to have an easy to understand and easy to use way to share design prototyping ideas with clients.</p>
+            <p>Webstiles soon became <a href="https://nmn.gl/blog/my-workflow-when-working-with-clients">a core part of my workflow</a>. My clients loved seeing multiple different Webstiles to choose from, and it also seemed to be well-received on social media.</p>
+          </article>
+          <footer><a href="http://webstiles.namanyayg.com/" class="creation__link">Visit Project</a>
+            <div class="creation__source"><a href="https://github.com/namanyayg/webstiles">Source on Github</a></div>
+          </footer>
+        </div>
+      </div>
       <div data-type="Book" class="creation lccpp">
         <div class="creation__img"><a href="https://leanpub.com/lessconfusingcpp"><img src="img/lccpp.png">
             <div class="creation__overlay"></div></a></div>
         <div class="creation__content">
           <h2 class="creation__name"><a href="https://leanpub.com/lessconfusingcpp">Less Confusing C++</a></h2>
           <footer><span class="creation__type">Book</span>
-            <div data-created-at="2017-06" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span> (Age&nbsp;<span class="age">&hellip;</span>)</div>
+            <div data-created-at="2017-06" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span><span class="age-container"></span></div>
           </footer>
           <article>
             <p>I always felt frustrated at the study material for my 11<sup>th</sup> grade Computer Science course, which was an introduction to C++. I believed there was a massive improvement to be made by re-organizing the structure and steps of the course.</p>
@@ -53,20 +70,19 @@
           </footer>
         </div>
       </div>
-      <div data-type="Tool" class="creation webstiles">
-        <div class="creation__img"><a href="http://webstiles.namanyayg.com/"><img src="img/webstiles.png">
+      <div data-type="Tool" class="creation indiasmile">
+        <div class="creation__img"><a href="https://indiasmile.org"><img src="img/indiasmile.png">
             <div class="creation__overlay"></div></a></div>
         <div class="creation__content">
-          <h2 class="creation__name"><a href="http://webstiles.namanyayg.com/">Webstiles In-Browser UI Prototyping</a></h2>
+          <h2 class="creation__name"><a href="https://indiasmile.org">IndiaSmile</a></h2>
           <footer><span class="creation__type">Tool</span>
-            <div data-created-at="2013-01" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span> (Age&nbsp;<span class="age">&hellip;</span>)</div>
+            <div data-created-at="2020-06" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span><span class="age-container"></span></div>
           </footer>
           <article>
-            <p>I made webstiles around the time when I first started working on client projects. Webstiles was born out of a need to have an easy to understand and easy to use way to share design prototyping ideas with clients.</p>
-            <p>Webstiles soon became <a href="https://nmn.gl/blog/my-workflow-when-working-with-clients">a core part of my workflow</a>. My clients loved seeing multiple different Webstiles to choose from, and it also seemed to be well-received on Reddit and HN.</p>
+            <p>Around when COVID struck, I wanted some way for my friends and family to be informed and also some way to unwind. That's why my team and I decided to make IndiaSmile. It was  no-nonsense website that showed the latest COVID-19 statistics, a whatsapp and telgram community of 2500+ members, and ways to stay happy and healthy during the pandemic combined.</p>
+            <p>It went viral. At its peak, it had over <strong>6,00,000 hits</strong> per day. I enjoyed the complex challenge of rearchitecturing the backend to handle the traffic.</p>
           </article>
-          <footer><a href="http://webstiles.namanyayg.com/" class="creation__link">Visit Project</a>
-            <div class="creation__source"><a href="https://github.com/namanyayg/webstiles">Source on Github</a></div>
+          <footer><a href="https://indiasmile.org" class="creation__link">Visit Project</a>
           </footer>
         </div>
       </div>
@@ -76,7 +92,7 @@
         <div class="creation__content">
           <h2 class="creation__name"><a href="https://nmn.gl/KeyZen/">KeyZen Touch Typing</a></h2>
           <footer><span class="creation__type">Game</span>
-            <div data-created-at="2013-10" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span> (Age&nbsp;<span class="age">&hellip;</span>)</div>
+            <div data-created-at="2013-10" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span><span class="age-container"></span></div>
           </footer>
           <article>
             <p>I made this game for a hackathon in a few hours. It was around a time when I was obssessed with improving my typing speed, following the logic that faster typing = faster programming.</p>
@@ -93,7 +109,7 @@
         <div class="creation__content">
           <h2 class="creation__name"><a href="https://nmn.gl/diode/">P-N Junction Diode</a></h2>
           <footer><span class="creation__type">Simulator</span>
-            <div data-created-at="2015-12" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span> (Age&nbsp;<span class="age">&hellip;</span>)</div>
+            <div data-created-at="2015-12" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span><span class="age-container"></span></div>
           </footer>
           <article>
             <p><em>&ldquo;Diode&rdquo; is part of my Physics Simulator series, where I simulate various physical phenomena using JavaScript. I made multiple works in this series during my final years of high school, both to get a better understanding of the mathematics and to perhaps help some of my friends as well.</em></p>
@@ -110,7 +126,7 @@
         <div class="creation__content">
           <h2 class="creation__name"><a href="https://nmn.gl/acgen">AC Generator</a></h2>
           <footer><span class="creation__type">Simulator</span>
-            <div data-created-at="2015-10" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span> (Age&nbsp;<span class="age">&hellip;</span>)</div>
+            <div data-created-at="2015-10" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span><span class="age-container"></span></div>
           </footer>
           <article>
             <p><em>&ldquo;AC Gen&rdquo; is part of my Physics Simulator series, where I simulate various physical phenomena using JavaScript. I made multiple works in this series during my final years of high school, both to get a better understanding of the mathematics and to perhaps help some of my friends as well.</em></p>
@@ -127,7 +143,7 @@
         <div class="creation__content">
           <h2 class="creation__name"><a href="https://nmn.gl/collisions">Collisions</a></h2>
           <footer><span class="creation__type">Simulator</span>
-            <div data-created-at="2015-08" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span> (Age&nbsp;<span class="age">&hellip;</span>)</div>
+            <div data-created-at="2015-08" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span><span class="age-container"></span></div>
           </footer>
           <article>
             <p><em>&ldquo;Collisions&rdquo; is part of my Physics Simulator series, where I simulate various physical phenomena using JavaScript. I made multiple works in this series during my final years of high school, both to get a better understanding of the mathematics and to perhaps help some of my friends as well.</em></p>
@@ -144,7 +160,7 @@
         <div class="creation__content">
           <h2 class="creation__name"><a href="https://nmn.gl/moo">Bulls &amp; Cows</a></h2>
           <footer><span class="creation__type">Research</span>
-            <div data-created-at="2015-11" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span> (Age&nbsp;<span class="age">&hellip;</span>)</div>
+            <div data-created-at="2015-11" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span><span class="age-container"></span></div>
           </footer>
           <article>
             <p>We were given the option of studying this game and produce a research paper for the <a href="https://coreisus.com/">COЯE</a> hackathon. We were given only 48 hours to prepare it. </p>
@@ -163,7 +179,7 @@
         <div class="creation__content">
           <h2 class="creation__name"><a href="https://nmn.gl/acgraphs">AC Graphs</a></h2>
           <footer><span class="creation__type">Simulator</span>
-            <div data-created-at="2015-12" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span> (Age&nbsp;<span class="age">&hellip;</span>)</div>
+            <div data-created-at="2015-12" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span><span class="age-container"></span></div>
           </footer>
           <article>
             <p><em>&ldquo;AC Graphs&rdquo; is part of my Physics Simulator series, where I simulate various physical phenomena using JavaScript. I made multiple works in this series during my final years of high school, both to get a better understanding of the mathematics and to perhaps help some of my friends as well.</em></p>
@@ -180,7 +196,7 @@
         <div class="creation__content">
           <h2 class="creation__name"><a href="https://nmn.gl/Equipot">Equipotential Surfaces</a></h2>
           <footer><span class="creation__type">Simulator</span>
-            <div data-created-at="2015-08" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span> (Age&nbsp;<span class="age">&hellip;</span>)</div>
+            <div data-created-at="2015-08" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span><span class="age-container"></span></div>
           </footer>
           <article>
             <p><em>&ldquo;Equipot&rdquo; is part of my Physics Simulator series, where I simulate various physical phenomena using JavaScript. I made multiple works in this series during my final years of high school, both to get a better understanding of the mathematics and to perhaps help some of my friends as well.</em></p>
@@ -197,7 +213,7 @@
         <div class="creation__content">
           <h2 class="creation__name"><a href="https://nmn.gl/SHM-simulator">Simple Harmonic Motion</a></h2>
           <footer><span class="creation__type">Simulator</span>
-            <div data-created-at="2015-02" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span> (Age&nbsp;<span class="age">&hellip;</span>)</div>
+            <div data-created-at="2015-02" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span><span class="age-container"></span></div>
           </footer>
           <article>
             <p><em>&ldquo;SHM Simulators&rdquo; is part of my Physics Simulator series, where I simulate various physical phenomena using JavaScript. I made multiple works in this series during my final years of high school, both to get a better understanding of the mathematics and to perhaps help some of my friends as well.</em></p>
