Add IDs to creations for easier internal linking

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
-  <link href="css/main.css?v=1707632052556" rel="stylesheet" type="text/css" media="all">
+  <link href="css/main.css?v=1708840241043" rel="stylesheet" type="text/css" media="all">
   <link rel="stylesheet" href="https://use.typekit.net/qfj0txf.css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css">
   <!--if lt IE 9script(src='//html5shiv.googlecode.com/svn/trunk/html5.js')
   -->
-  <script src="js/main.js?v=1707632052557"></script>
+  <script src="js/main.js?v=1708840241043"></script>
   <title>Lab | Namanyay Goel</title>
 </head>
 <body>
@@ -37,7 +37,7 @@
   </header>
   <div class="wrapper">
     <div class="creations">
-      <div data-type="Tool" class="creation webstiles">
+      <div id="webstiles" data-type="Tool" class="creation webstiles">
         <div class="creation__img"><a href="http://webstiles.namanyayg.com/"><img src="img/webstiles.png">
             <div class="creation__overlay"></div></a></div>
         <div class="creation__content">
@@ -54,7 +54,7 @@
           </footer>
         </div>
       </div>
-      <div data-type="Book" class="creation lccpp">
+      <div id="lccpp" data-type="Book" class="creation lccpp">
         <div class="creation__img"><a href="https://leanpub.com/lessconfusingcpp"><img src="img/lccpp.png">
             <div class="creation__overlay"></div></a></div>
         <div class="creation__content">
@@ -70,7 +70,7 @@
           </footer>
         </div>
       </div>
-      <div data-type="Tool" class="creation indiasmile">
+      <div id="indiasmile" data-type="Tool" class="creation indiasmile">
         <div class="creation__img"><a href="https://indiasmile.org"><img src="img/indiasmile.png">
             <div class="creation__overlay"></div></a></div>
         <div class="creation__content">
@@ -86,7 +86,7 @@
           </footer>
         </div>
       </div>
-      <div data-type="Game" class="creation keyzen">
+      <div id="keyzen" data-type="Game" class="creation keyzen">
         <div class="creation__img"><a href="https://nmn.gl/KeyZen/"><img src="img/keyzen.png">
             <div class="creation__overlay"></div></a></div>
         <div class="creation__content">
@@ -103,7 +103,7 @@
           </footer>
         </div>
       </div>
-      <div data-type="Simulator" class="creation diode">
+      <div id="diode" data-type="Simulator" class="creation diode">
         <div class="creation__img"><a href="https://nmn.gl/diode/"><img src="img/diode.png">
             <div class="creation__overlay"></div></a></div>
         <div class="creation__content">
@@ -120,7 +120,7 @@
           </footer>
         </div>
       </div>
-      <div data-type="Simulator" class="creation acgen">
+      <div id="acgen" data-type="Simulator" class="creation acgen">
         <div class="creation__img"><a href="https://nmn.gl/acgen"><img src="img/acgen.png">
             <div class="creation__overlay"></div></a></div>
         <div class="creation__content">
@@ -137,7 +137,7 @@
           </footer>
         </div>
       </div>
-      <div data-type="Simulator" class="creation collisions">
+      <div id="collisions" data-type="Simulator" class="creation collisions">
         <div class="creation__img"><a href="https://nmn.gl/collisions"><img src="img/collisions.png">
             <div class="creation__overlay"></div></a></div>
         <div class="creation__content">
@@ -154,7 +154,7 @@
           </footer>
         </div>
       </div>
-      <div data-type="Research" class="creation bandc">
+      <div id="bandc" data-type="Research" class="creation bandc">
         <div class="creation__img"><a href="https://nmn.gl/moo"><img src="img/bandc.png">
             <div class="creation__overlay"></div></a></div>
         <div class="creation__content">
@@ -173,7 +173,7 @@
           </footer>
         </div>
       </div>
-      <div data-type="Simulator" class="creation acgraphs">
+      <div id="acgraphs" data-type="Simulator" class="creation acgraphs">
         <div class="creation__img"><a href="https://nmn.gl/acgraphs"><img src="img/acgraphs.png">
             <div class="creation__overlay"></div></a></div>
         <div class="creation__content">
@@ -190,7 +190,7 @@
           </footer>
         </div>
       </div>
-      <div data-type="Simulator" class="creation equipot">
+      <div id="equipot" data-type="Simulator" class="creation equipot">
         <div class="creation__img"><a href="https://nmn.gl/Equipot"><img src="img/equipot.png">
             <div class="creation__overlay"></div></a></div>
         <div class="creation__content">
@@ -207,7 +207,7 @@
           </footer>
         </div>
       </div>
-      <div data-type="Simulator" class="creation shm-simulator">
+      <div id="shm-simulator" data-type="Simulator" class="creation shm-simulator">
         <div class="creation__img"><a href="https://nmn.gl/SHM-simulator"><img src="img/shm-simulator.png">
             <div class="creation__overlay"></div></a></div>
         <div class="creation__content">
