--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
-  <link href="css/main.css?v=1708840241043" rel="stylesheet" type="text/css" media="all">
+  <link href="css/main.css?v=1711641460142" rel="stylesheet" type="text/css" media="all">
   <link rel="stylesheet" href="https://use.typekit.net/qfj0txf.css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css">
   <!--if lt IE 9script(src='//html5shiv.googlecode.com/svn/trunk/html5.js')
   -->
-  <script src="js/main.js?v=1708840241043"></script>
+  <script src="js/main.js?v=1711641460142"></script>
   <title>Lab | Namanyay Goel</title>
 </head>
 <body>
@@ -37,6 +37,24 @@
   </header>
   <div class="wrapper">
     <div class="creations">
+      <div id="kevin" data-type="AI" class="creation kevin">
+        <div class="creation__img"><a href="https://nmn.gl/kevin"><img src="img/kevin.png">
+            <div class="creation__overlay"></div></a></div>
+        <div class="creation__content">
+          <h2 class="creation__name"><a href="https://nmn.gl/kevin">Kevin: Open Source AI Software Engineer</a></h2>
+          <footer><span class="creation__type">AI</span>
+            <div data-created-at="2024-03" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span><span class="age-container"></span></div>
+          </footer>
+          <article>
+            <p>It has been a dream of mine to create a bot that could write code for me <em>(so I could delegate the boilerplate and focus on the creative parts of programming)</em>.</p>
+            <p>Seeing Devin made me realize that my teenage dream is close to becoming reality. For personal satisfaction, I embarked on making my own open-source interface.</p>
+            <p>The name comes from the legendary phreaker and my childhood hero <strong>Kevin Mitnick</strong> and is a play on Cognition Labs&rsquo; product name.</p>
+          </article>
+          <footer><a href="https://nmn.gl/kevin" class="creation__link">Visit Project</a>
+            <div class="creation__source"><a href="https://github.com/namanyayg/kevin">Source on Github</a></div>
+          </footer>
+        </div>
+      </div>
       <div id="webstiles" data-type="Tool" class="creation webstiles">
         <div class="creation__img"><a href="http://webstiles.namanyayg.com/"><img src="img/webstiles.png">
             <div class="creation__overlay"></div></a></div>
