--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
-  <link href="css/main.css?v=1711641460142" rel="stylesheet" type="text/css" media="all">
+  <link href="css/main.css?v=1715595274206" rel="stylesheet" type="text/css" media="all">
   <link rel="stylesheet" href="https://use.typekit.net/qfj0txf.css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css">
   <!--if lt IE 9script(src='//html5shiv.googlecode.com/svn/trunk/html5.js')
   -->
-  <script src="js/main.js?v=1711641460142"></script>
+  <script src="js/main.js?v=1715595274206"></script>
   <title>Lab | Namanyay Goel</title>
 </head>
 <body>
@@ -37,6 +37,25 @@
   </header>
   <div class="wrapper">
     <div class="creations">
+      <div id="serenityai" data-type="AI" class="creation serenityai">
+        <div class="creation__img"><a href="https://notatherapistai.com"><img src="img/serenityai.png">
+            <div class="creation__overlay"></div></a></div>
+        <div class="creation__content">
+          <h2 class="creation__name"><a href="https://notatherapistai.com">Serenity: Mental Health AI Chat Bot</a></h2>
+          <footer><span class="creation__type">AI</span>
+            <div data-created-at="2024-05" class="creation__date-and-age">Created&nbsp;<span class="date">&hellip;</span><span class="age-container"></span></div>
+          </footer>
+          <article>
+            <p>Journaling has been proven to improve mood and reduce anxiety.</p>
+            <p>And, "journaling" is more fun when done conversationally with a good listener.</p>
+            <p>AI is the perfect companion for that.</p>
+            <p>Serenity AI is your non-judgemental companion to reflect on your day and improve your mood.</p>
+          </article>
+          <footer><a href="https://notatherapistai.com" class="creation__link">Visit Project</a>
+            <div class="creation__source"><a href="https://github.com/namanyayg/serenityai">Source on Github</a></div>
+          </footer>
+        </div>
+      </div>
       <div id="kevin" data-type="AI" class="creation kevin">
         <div class="creation__img"><a href="https://nmn.gl/kevin"><img src="img/kevin.png">
             <div class="creation__overlay"></div></a></div>
